# autonomous-product-development

./: .gitignore  ACTIVE_RUN.md  AGENTS.md  BUILD_RUN.md  DISCOVERY_RUN_MODE.md  DISCOVERY_RUN_PROMPT.md  FIRST_RUN_HARDENING_SUMMARY.md  FIRST_RUN_MODE.md  FIRST_RUN_PROMPT.md  FIRST_RUN_SETUP_SUMMARY.md  FRAMEWORK-VNEXT.md  FRAMEWORK_REFACTOR_SUMMARY.md  LAUNCH_MODEL_SUMMARY.md  README.md  START_HERE.md  alembic.ini  pyproject.toml  theme.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels-and-milestones.md  repo-rails.yml
agent/: artifact-output-conventions.md  definition-of-done.md  human-gates.md  lifecycle-map.md  orchestration-v3.md  repo-conventions.md  research-corpus-conventions.md  runbook.md  system-prompt.md
alembic/: env.py
apd/: __init__.py
artifacts/: README.md
docs/: agent-draft-import.md  backlog.md  briefs.md  candidate-review.md  data-model.md  decision-log.md  design.md  development-roadmap.md  discovery-run-hardening-note.md  first-run-hardening-note.md  first-run-readiness-note.md  framework-assessment.md  github-workflow.md  launch-checklist.md  launch-diagnosis.md  lifecycle-review.md  metrics-and-feedback.md  mvp-contract.md  operating-surface-audit.md  operations-gap-analysis.md  opportunity-scorecard.md  product-brief.md  prototype-standard.md  release.md  requirements.md  research.md  retrospective.md  roadmap.md  validation.md  work-log.md
research-corpus/: README.md
scripts/: README.md  autopd.py  check_first_run_readiness.py  check_repo_readiness.py  clean_empty_run_dirs.py  export_markdown_report.py  test.ps1  (+9 more)
(+162 files in other folders)
