[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "apd-local-app"
version = "0.1.0"
description = "Local APD app skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["apd"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
